--- a/javaAPI/test-output/old/Suite/methods-alphabetical.html
+++ b/javaAPI/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:44</td>   <td>0</td> <td title="&gt;&gt;FinalSuiteTest.before()[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">&gt;&gt;before</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1778081847</td>   <td></td> </tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:45</td>   <td>65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getResourceListTest()[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">getResourceListTest</td> 
-  <td>main@1778081847</td>   <td></td> </tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:51</td>   <td>6087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getSingleResourceWithParameterTest(java.lang.String)[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">getSingleResourceWithParameterTest</td> 
-  <td>main@1778081847</td>   <td></td> </tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:51</td>   <td>6504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getSingleUserWithParameterTest(java.lang.String)[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">getSingleUserWithParameterTest</td> 
-  <td>main@1778081847</td>   <td></td> </tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:51</td>   <td>6824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getUserListTest()[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">getUserListTest</td> 
-  <td>main@1778081847</td>   <td></td> </tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:52</td>   <td>7112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.postCreateUserTest()[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">postCreateUserTest</td> 
-  <td>main@1778081847</td>   <td></td> </tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:52</td>   <td>7717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.postFailLoginTest()[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">postFailLoginTest</td> 
-  <td>main@1778081847</td>   <td></td> </tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:53</td>   <td>8209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.postRegisterTest()[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">postRegisterTest</td> 
-  <td>main@1778081847</td>   <td></td> </tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:53</td>   <td>8748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.postSuccessfulLoginTest()[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">postSuccessfulLoginTest</td> 
-  <td>main@1778081847</td>   <td></td> </tr>
-<tr bgcolor="c17b83">  <td>22/11/15 09:00:54</td>   <td>9250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.putUpdateUserTest()[pri:0, instance:com.unosquare.FinalSuiteTest@561b6512]">putUpdateUserTest</td> 
-  <td>main@1778081847</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:23</td>   <td>0</td> <td title="&gt;&gt;FinalSuiteTest.before()[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">&gt;&gt;before</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:23</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getResourceListTest()[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">getResourceListTest</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:28</td>   <td>4405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getSingleResourceWithParameterTest(java.lang.String)[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">getSingleResourceWithParameterTest</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:28</td>   <td>4994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getSingleUserWithParameterTest(java.lang.String)[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">getSingleUserWithParameterTest</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:29</td>   <td>5570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getUserListTest()[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">getUserListTest</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:29</td>   <td>5845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.postCreateUserTest()[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">postCreateUserTest</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:30</td>   <td>6666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.postFailLoginTest()[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">postFailLoginTest</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:30</td>   <td>7201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.postRegisterTest()[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">postRegisterTest</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:31</td>   <td>8135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.postSuccessfulLoginTest()[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">postSuccessfulLoginTest</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>22/11/15 12:59:32</td>   <td>9236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.putUpdateUserTest()[pri:0, instance:com.unosquare.FinalSuiteTest@258e2e41]">putUpdateUserTest</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
 </table>
